# JeeJuh-Downloader

./: README.md
powershell/: README.md  jeejuh-dl.ps1
python/: README.md  jeejuh-dl.py  pyproject.toml  requirements.txt
python/jeejuh_dl/: __main__.py  main.py
