[tool.poetry]
name = "jeejuh-dl"
version = "1.1"
description = "Downloads links from jeejuh.com purchases"
authors = ["Leron Gray"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/daddycocoaman/JeeJuh-Downloader"

[tool.poetry.dependencies]
python = "^3.8"
gazpacho = "^1.1"
rich = "^9.8.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"

[tool.poetry.scripts]
jeejuh-dl = "jeejuh_dl.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
